--- a/AttendanceUserInterface/MainWindow.xaml
+++ b/AttendanceUserInterface/MainWindow.xaml
@@ -5,17 +5,49 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AttendanceUserInterface"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="525">
+        Title="Student Attendance UI" Height="450" Width="525" ResizeMode="CanMinimize">
+    <Window.Background>
+        <ImageBrush/>
+    </Window.Background>
     <Grid x:Name="attendanceUI">
+        <Grid.Background>
+            <ImageBrush>
+                <ImageBrush.ImageSource>
+                    <BitmapImage UriSource="C:\Users\nauri\Desktop\RADproject2018-master\AttendanceUserInterface\Assets\wallhaven-481628.png"/>
+                </ImageBrush.ImageSource>
+            </ImageBrush>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1.5*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
         <Grid Grid.Column="1">
-            <Grid.RowDefinitions>
-                
-            </Grid.RowDefinitions>
+            <Grid x:Name="InfoGrid" Height="200" Margin="0,10,0,209" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                </Grid.RowDefinitions>
+                <Label x:Name="studentId" Content="" Grid.Column="0" Grid.Row="0"/>
+                <Label x:Name="studentFName" Content="" Grid.Column="0" Grid.Row="1"/>
+                <Label x:Name="studentLName" Content="" Grid.Column="0" Grid.Row="2"/>
+                <Label x:Name="studentNum" Content="" Grid.Column="0" Grid.Row="3"/>
+                <Label x:Name="studentEmail" Content="" Grid.Column="0" Grid.Row="4"/>
+            </Grid>
         </Grid>
-        <ListBox x:Name="studentList" Grid.Column="0" Width="200" Height="400" SelectionChanged="studentList_SelectionChanged"/>
+        <Grid Grid.Column="1" Grid.Row="1">
+            <Button Content="Add" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Width="100"/>
+            <Button Content="Edit" HorizontalAlignment="Left" Margin="139,10,0,0" VerticalAlignment="Top" Width="100" Click="Button_Click"/>
+            <Button Content="Delete " HorizontalAlignment="Left" Margin="20,60,0,0" VerticalAlignment="Top" Width="100"/>
+            <Button Content="Update" HorizontalAlignment="Left" Margin="139,60,0,0" VerticalAlignment="Top" Width="100"/>
+
+        </Grid>
+        <ListBox x:Name="studentList" Grid.Column="0" Grid.RowSpan="2" Width="200" Height="400" SelectionChanged="studentList_SelectionChanged"/>
     </Grid>
 </Window>
